Update image vars and sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,38 @@
-# visit https://github.com/mojombo/jekyll/wiki/Configuration for more settings
-
-paginate: 6 # pagination based on number of posts
+title: PowerShell Escape
+description: "a blog about Powershell, DevOps, and all things IT. \r\n homepage of Matt McNabb"
+BASE_PATH:
+permalink: :title
+paginate: 6
 paginate_path: "page:num"
-exclude: ["README.md"] # files to exclude
-highlighter: rouge
-markdown: kramdown
 disqus: mattmcnabbgithubio
 google_analytics: UA-69802890-1
-title: PowerShell Escape
-
-defaults:
-  -
-    scope:
-      path: "" # empty string for all files
-    values:
-      title: PowerShell Escape
-
-description: a blog about Powershell, DevOps, and all things IT
-author:
-  name: Matt McNabb
-  email: mmcnabb@outlook.com
-  github: mattmcnabb
-  twitter: mcnabbmh
-  #pinterest: asd123
-  #linkedin: asd123
-  bio: Windows Systems Engineer and PowerShell enthusiast | 2016 PowerShell.org PowerShell Hero
-  email_md5: 726351295ec82e145928582f595aa3aa
-
 rss_path: feed.xml
 categories_path: categories.html
 tags_path: tags.html
 resources_path: resources.html
 
+highlighter: rouge
+markdown: kramdown
+
+author:
+  name: Matt McNabb
+  email: mmcnabb@outlook.com
+  github: mattmcnabb
+  twitter: mcnabbmh
+  bio: Windows Systems Engineer and PowerShell enthusiast | 2016 PowerShell.org PowerShell Hero
+  email_md5: 726351295ec82e145928582f595aa3aa
+  image: /assets/media/MattBW.png
+
 # set it as url of an image
-# sidebar_background_image: https://www.dropbox.com/s/g9h23zrycedxtk5/sky.png?raw=1
+sidebar_logo: /assets/media/PowerShellHero150x150.png
 
-BASE_PATH:
-permalink: :title
-
+exclude: ["README.md","jekyll-metadata"]
 gems:
   - jekyll-paginate
+  - jekyll-gist
+
+  #defaults:
+#    scope:
+#      path: ""
+#    values:
+#      title: PowerShell Escape
