--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: \PowerShell Escape
+title: "\PowerShell Escape"
 description: "a blog about Powershell, DevOps, and all things IT. \r\n homepage of Matt McNabb"
 BASE_PATH:
 permalink: :title
