--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "\\PowerShell Escape"
 description: "PowerShell, IT, thoughts, and ramblings | Homepage of Matt McNabb"
-url: http://localhost:4000
-#url: https://mattmcnabb.github.io
+#url: http://localhost:4000
+url: https://mattmcnabb.github.io
 baseurl: ""
 permalink: pretty
 favicon: /assets/img/favicon.ico
